Fix clientX/Y properties of touch pointer events

Before this change clientX/Y of touch pointer events
were incorrectly set from content coordinates.
But after this CL they are correctly translated
by scroll position and will become clientX/Y.

BUG=608394

Review-Url: https://codereview.chromium.org/1964523002
Cr-Commit-Position: refs/heads/master@{#392722}

Former-commit-id: 52b840ceccfb1041681e0e85a61e9bcdee071b8a